# janus-ptt-audiobridge-plugin

./: CMakeLists.txt  README.md
conf/: janus.plugin.ptt-audiobridge.jcfg.sample  janus.plugin.ptt-audioroom.jcfg.sample
html/: ptt-audiobridge-test.html  ptt-audiobridge-test.js  ptt-audioroom-test.html  ptt-audioroom-test.js
snap/: snapcraft.yaml
snap/hooks/: install
src/: actor.cpp  actor.h  audio_recorder.cpp  audio_recorder.h  c_ptr.h  constants.h  event_handlers.cpp  event_handlers.h  event_source.cpp  event_source.h  glib_ptr.h  helpers.h  janus_audiobridge_message.cpp  janus_audiobridge_message.h  janus_audiobridge_participant.cpp  janus_audiobridge_participant.h  janus_audiobridge_room.cpp  janus_audiobridge_room.h  janus_audiobridge_rtp_forwarder.cpp  janus_audiobridge_rtp_forwarder.h  janus_audiobridge_rtp_relay_packet.cpp  janus_audiobridge_rtp_relay_packet.h  janus_audiobridge_session.cpp  janus_audiobridge_session.h  janus_mutex_lock_guard.h  janus_ptt_audioroom.c  janus_ptt_audioroom.cpp  janus_ptt_audioroom.h  json_ptr.h  opus_file.cpp  opus_file.h  plugin_session.cpp  plugin_session.h  ptt_audiobridge_plugin.cpp  ptt_audiobridge_plugin.h  ptt_audioroom_plugin.cpp  ptt_audioroom_plugin.h  ptt_room.cpp  ptt_room.h  record.cpp  (+13 more)
